--- a/wr227.ipynb
+++ b/wr227.ipynb
@@ -6,7 +6,7 @@
       "name": "wr227.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNxi3YoSL3ofiUNFwfikL7U",
+      "authorship_tag": "ABX9TyMp9nCMhffJnRkOFK1+yTfB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -194,7 +194,8 @@
         "2. file csv sẽ được xuất ra trong folder metrics\n",
         "3. analysis sẽ dùng (CURRENT_MODEL_NAME).pb test trên file tfrecords được quy định ở dòng 10 trong paths.py\n",
         "--> EX: CURRENT_MODEL_NAME = '70Model' và TRAIN_TF_RECORDS = os.path.join(DATA_ROOT, 'stanford30.tfrecords') \n",
-        "--> nghĩa là dùng model 70% test trên bộ dataset 30%."
+        "--> nghĩa là dùng model 70% test trên bộ dataset 30%.\n",
+        "4. Download file csv này về để phân tích"
       ]
     },
     {
